2006-01-19  Andrew Cagney  <cagney@redhat.com>

	* TestLib.java (AckProcess.execClone): Wait for both parentAck and
	childAck.

2006-01-19  Stan Cox  <scox@redhat.com>

	* TestLib.java (execClone): Use parentAck instead of childAck.

2006-01-16  Andrew Cagney  <cagney@redhat.com>

	* Host.java (requestCreateAttachedProcXXX): Rename
	requestCreateAttachedProc.
	* TestTaskTerminateObserver.java: Update.
	* TestTaskObserver.java: Update.
	* TestTaskObserverBlocked.java: Update.
	* TestSyscallOpen.java: Update.
	* TestSyscall.java: Update.
	* TestSyscall2.java: Update.
	* TestRun.java: Update.
	* TestModify.java: Update.
	* TestI386Regs.java: Update.
	* TestI386Modify.java: Update.

2006-01-16  Stan Cox  <scox@redhat.com>

	* TestRefresh.java (testUnattachedMultipleExec): Check colon. 

2006-01-16  Stan Cox  <scox@redhat.com>

	* TestLib.java (findProcUsingRefresh): Always poll.
	(execClone): New.
	* TestRefresh.java (testUnattachedSingleExec): New.
	(testUnattachedMultipleExec): New.

2006-01-11  Andrew Cagney  <cagney@redhat.com>

	* TestProcGet.java, Syscall.java, Auxv.java: Update inua imports
	to match latest import.

	* Proc.java (requestDetachedContinue): Delete.
	(requestAttachedContinue): Delete.
	* ProcState.java (processRequestAttachedContinue): Delete.
	(processRequestDetachedContinue): Delete.
	* TestProcStates.java: Delete.

	* Task.java (stepEvent): Delete.
	* TaskState.java: Delete calls to Task .stepEvent .notify.

	* Task.java (requestedStopEvent): Delete.
	* TaskState.java: Delete calls to Task .requestedStopEvent
	.notify.
	* TestUnpaused.java: Delete.
	* TestStop.java: Delete.
	* TestStopAndStop.java: Delete.
	* TestStep.java: Delete.
	* TestStopAndGo.java: Delete.
	* TestPaused.java: Delete.
	* TestGoAndGo.java: Delete.

2006-01-10  Andrew Cagney  <cagney@redhat.com>

	* TestTaskObserver.java (attach(Task)): Refactor, creating ...
	(attach(Task,AttachedObserver): New function.
	(testAttachDetachRapidlyCloningMainTask): Add local